syntax = "proto3";

package medvedev.ilya.monitor.protobuf;

message SensorMessage {
    message SensorInfo {
        message SensorValue {
            string name = 1;
            float value = 2;
        }

        string name = 1;
        repeated SensorValue value = 2;
    }

    int64 time = 1;
    repeated SensorInfo value = 2;
}